fix media citation mobile styles - RMNRW-145

--- a/docroot/themes/nrw/nrw_base_theme/source/sass/modules/media_citation/_media-citation.scss
+++ b/docroot/themes/nrw/nrw_base_theme/source/sass/modules/media_citation/_media-citation.scss
@@ -1,11 +1,27 @@
 .citation {
   color: $brand-primary;
+  .row {
+    @include smaller-than($screen-xs-max) {
+      display: flex;
+      flex-direction: column;
+    }
+  }
   &__left {
     padding: $vertical-gutter-width $padding-small-horizontal*5;
     &:after {
       @include triangle-right($color: $color-white);
       right: -15px;
       top: $grid-gutter-width/2;
+    }
+    @include smaller-than($screen-xs-max) {
+      order: 1;
+      padding: $padding-large-vertical*5 $grid-gutter-width/2 $padding-large-vertical $grid-gutter-width/2;
+      &:after {
+        @include triangle-up($color: $color-white);
+        right: auto;
+        left: 20px;
+        top: -30px;
+      }
     }
   }
   &__right {
@@ -17,11 +33,17 @@
     font-family: $font-family-serif;
     font-style: italic;
     padding-bottom: $padding-base-vertical;
+    @include smaller-than($screen-xs-max) {
+      font-size: $font-size-h4;
+    }
     &:before,
     &:after {
       font-size: 124px;
       margin: 0;
       line-height: 0;
+      @include smaller-than($screen-xs-max) {
+        font-size: 100px;
+      }
     }
     &:before {
       content: "\201C";
